--- a/timings.html
+++ b/timings.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Railway Management System</h1>
+        <h1>Indain Railways</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
